# tatara-lisp

./: Cargo.nix  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  flakehub.yml
darwin-module/: default.nix
docs/: eval-design.md
module/: default.nix
nixos-module/: default.nix
tatara/: Cargo.toml
tatara-cilium/: Cargo.toml  README.md
tatara-cilium/src/: lib.rs
tatara-doc/: Cargo.toml
tatara-doc/src/: lib.rs
tatara-doc/tests/: end_to_end.rs
tatara-domain-forge/: Cargo.toml
tatara-domain-forge/src/: emit.rs  ir.rs  lib.rs  source.rs
tatara-ebpf/: Cargo.toml
tatara-ebpf/examples/: edge-protection.tlisp
tatara-ebpf/src/: bpf_fn.rs  codegen.rs  lib.rs  runtime.rs  spec.rs
tatara-ebpf/tests/: end_to_end.rs
tatara-env/: Cargo.toml
tatara-env/docs/: CONVERGENCE.md
tatara-env/examples/: edge-platform.tlisp
tatara-env/src/: compile.rs  lattice.rs  lib.rs  spec.rs  validate.rs
tatara-env/tests/: end_to_end.rs
tatara-gateway-api/: Cargo.toml  README.md
tatara-gateway-api/src/: lib.rs
tatara-gateway-api/tests/: end_to_end.rs
tatara-lisp/: Cargo.toml
tatara-lisp-derive/: Cargo.toml
tatara-lisp-derive/src/: lib.rs
tatara-lisp-eval/: Cargo.toml
tatara-lisp-eval/src/: build_check.rs  channel.rs  code.rs  env.rs  error.rs  eval.rs  ffi.rs  fiber.rs  hof.rs  interner.rs  lib.rs  lisp_stdlib.rs  lisp_stdlib.tlisp  map.rs  module.rs  primitive.rs  repl.rs  special.rs  type_check.rs  value.rs
tatara-lisp-eval/src/vm/: chunk.rs  compile.rs  mod.rs  op.rs  parity.rs  run.rs
tatara-lisp-script/: Cargo.toml
tatara-lisp-script/src/: lib.rs  main.rs  script_ctx.rs
tatara-lisp-script/src/stdlib/: cli.rs  crypto_extra.rs  encoding.rs  env.rs  fs.rs  hash.rs  http.rs  http_server.rs  io.rs  json.rs  kube.rs  list_ext.rs  log.rs  mod.rs  module.rs  os.rs  process.rs  regex.rs  sops.rs  string.rs  string_ext.rs  time.rs  toml.rs  uuid.rs  yaml.rs
tatara-lisp-source/: Cargo.toml
tatara-lisp-source/src/: cache.rs  fetch.rs  lib.rs  parse.rs
tatara-lisp/src/: ast.rs  compile.rs  compiler_spec.rs  domain.rs  env.rs  error.rs  interop.rs  lib.rs  macro_expand.rs  reader.rs  span.rs  spanned.rs  spanned_expand.rs
tatara-platform-checks/: Cargo.toml
tatara-platform-checks/src/: lib.rs
tatara-platform-checks/tests/: end_to_end.rs
tatara-prometheus-operator/: Cargo.toml  README.md
tatara-prometheus-operator/src/: lib.rs
tatara-render/: Cargo.toml
tatara-render/src/: backend.rs  kubernetes_yaml.rs  lib.rs
tatara-render/tests/: end_to_end.rs
tatara-rollout/: Cargo.toml
tatara-rollout/src/: diff.rs  fingerprint.rs  lib.rs  plan.rs  toposort.rs
tatara-rollout/tests/: end_to_end.rs
tatara/src/: main.rs
