[workspace]
members = [
    "tatara",
    "tatara-domain-forge",
    "tatara-lisp",
    "tatara-lisp-derive",
    "tatara-lisp-eval",
    "tatara-lisp-script",
    "tatara-lisp-source",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.89.0"
authors = ["Pleme.io <engineering@pleme.io>"]
license = "MIT"
repository = "https://github.com/pleme-io/tatara-lisp"
homepage = "https://github.com/pleme-io/tatara-lisp"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
