[package]
name = "tatara-domain-forge"
description = "Generate tatara-lisp domain crates from typed inputs (K8s CRDs, OpenAPI 3.0 schemas, hand-authored TOML). Each output crate ships #[derive(TataraDomain)] structs + a register() function that exposes the schema as Lisp keyword forms."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[[bin]]
name = "tatara-domain-forge"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
