[package]
name = "tatara-env"
description = "Typed environments — compose N tatara-domain resources into one validated stack snapshot. Every catalog domain (gateway-api, cilium, prometheus-operator, ebpf, …) plugs in via its `register()` and the env collects every (def<keyword> …) form into a typed graph the synthesizer / FluxCD / tameshi pipeline can consume."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
tatara-lisp-derive = { path = "../tatara-lisp-derive" }
tatara-lisp = { path = "../tatara-lisp" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tatara-ebpf = { path = "../tatara-ebpf" }
tatara-gateway-api = { path = "../tatara-gateway-api" }
