[package]
name = "tatara-lisp"
description = "Homoiconic S-expression reader + macroexpander — the pleme-io Lisp authoring surface, hermetic-build standalone"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
tatara-lisp-derive = { path = "../tatara-lisp-derive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
blake3 = "1"

[features]
default = []
