[package]
name = "tatara-prometheus-operator"
description = "Tatara domain wrapping 1 CRD(s)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
tatara-lisp-derive = { path = "../tatara-lisp-derive" }
tatara-lisp = { path = "../tatara-lisp" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
